# fasttransform

./: .gitignore  CHANGELOG.md  README.md  cast.html  cast.html.md  fastcore_migration_guide.html  fastcore_migration_guide.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  test_quantum.html  test_quantum.md  transform.html  transform.html.md
fasttransform/: __init__.py  _modidx.py  all.py  cast.py  core.py  dispatch.py  dispatch_old.py  monkeydispatch.py  pipeline.py  transform.py  utils.py
nbs/: 00_cast.ipynb  00_core.ipynb  00_dispatch.ipynb  00_utils.ipynb  01_transform.ipynb  02_pipeline.ipynb  03_monkey_dispatch.ipynb  03_pipeline.ipynb  04_dispatch.ipynb  05_transform.ipynb  exploration_return_type_casting.ipynb  exploration_transform_with_plum.ipynb  fastcore_migration_guide.ipynb  index.ipynb  nbdev.yml  pipeline.ipynb  test_fastai.ipynb  test_fastbook.ipynb  test_quantum.ipynb
